--- a/farmerapp/src/app/default/default-header/default-header.component.html
+++ b/farmerapp/src/app/default/default-header/default-header.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <span> {{ appName }} </span>
         <span class="fill-remaining-space"></span>
-        <button mat-button>Log In</button>
-        <button mat-button>Sign Up</button>
+        <button mat-button (click)="login()">Log In</button>
+        <button mat-button (click)="signUp()">Sign Up</button>
     </mat-toolbar-row>
 </mat-toolbar>
