Service structure updated

--- a/farmerapp/src/app/dashboard/profile/profile.component.html
+++ b/farmerapp/src/app/dashboard/profile/profile.component.html
@@ -6,14 +6,11 @@
     </button>
 </mat-toolbar>
 <mat-toolbar>
-    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==0" (click)="updateProfileIndex(0)">My
-        Details</a>
+    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==0" (click)="updateProfileIndex(0)">My Details</a>
     <!-- <span class="fill-remaining-space"></span> -->
-    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==1" (click)="updateProfileIndex(1)">Bank
-        Details</a>
+    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==1" (click)="updateProfileIndex(1)">Bank Details</a>
     <!-- <span class="fill-remaining-space"></span> -->
-    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==2" (click)="updateProfileIndex(2)">Address
-        Details</a>
+    <a mat-raised-button [class.profile-mat-item-selected]="profileIndex==2" (click)="updateProfileIndex(2)">Address Details</a>
 </mat-toolbar>
 
 <mat-dialog-content class="mat-typography">
