--- a/farmerapp/src/app/entry-components/my-login/my-login.component.html
+++ b/farmerapp/src/app/entry-components/my-login/my-login.component.html
@@ -1,14 +1,23 @@
+<mat-toolbar color="primary">
+    <h1 mat-dialog-title> {{ formTitle }} </h1>
+    <span class="fill-remaining-space"></span>
+    <button class="btn-dialog-close" mat-stroked-button (click)="closeDialog()" tabindex="-1">
+        <mat-icon>clear</mat-icon>
+    </button>
+</mat-toolbar>
 
-<form [formGroup]="loginForm" (ngSubmit)="validateLogin(loginForm)" >
-    <div class="form-group">
-        <label for="emailId">Email address</label>
-        <input type="email" class="form-control" id="emailId" formControlName="userName" 
-            aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary btn-block" >Submit</button>
-</form>
+<mat-dialog-content class="mat-typography">
+    <form [formGroup]="loginForm" (ngSubmit)="validateLogin(loginForm)" >
+        <div class="form-group">
+            <label for="emailId">Email address</label>
+            <input type="email" class="form-control" id="emailId" formControlName="userName" 
+                aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" >Submit</button>
+    </form>
+</mat-dialog-content>
