--- a/farmerapp/src/styles.scss
+++ b/farmerapp/src/styles.scss
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.fill-remaining-space {
+    flex: 1 1 auto;
+}
+
+.dialog-responsive-xs {
+    flex: 0 0 100%;
+    padding-right: 0;
+    padding-left: 0;
+}
+  
