Added product module and common component for dialog header

--- a/farmerapp/src/app/entry-components/add-edit-product-bid/add-edit-product-bid.component.html
+++ b/farmerapp/src/app/entry-components/add-edit-product-bid/add-edit-product-bid.component.html
@@ -1,13 +1,6 @@
-<mat-toolbar>
-    <h1 mat-dialog-title>{{formTitle}} : {{selectedProductName}}</h1>
-    <span class="fill-remaining-space"></span>
-    <button class="btn-dialog-close" mat-stroked-button (click)="closeDialog()" tabindex="-1">
-        <mat-icon>clear</mat-icon>
-    </button>
-</mat-toolbar>
+<app-top-dialog-content [title]="formTitle" (closeClick)="closeDialog()"></app-top-dialog-content>
 
 <mat-dialog-content class="mat-typography">
-
     <form class="form-container" [formGroup]="productBidform" (ngSubmit)="saveProductBid(productBidform)">
         <div class="form-group">
             <label for="bidAmount">Bid Price</label>
