--- a/farmerapp/src/app/entry-components/my-login/my-login.component.html
+++ b/farmerapp/src/app/entry-components/my-login/my-login.component.html
@@ -1,10 +1,4 @@
-<mat-toolbar color="primary">
-    <h1 mat-dialog-title> {{ formTitle }} </h1>
-    <span class="fill-remaining-space"></span>
-    <button class="btn-dialog-close" mat-stroked-button (click)="closeDialog()" tabindex="-1">
-        <mat-icon>clear</mat-icon>
-    </button>
-</mat-toolbar>
+<app-top-dialog-content [titleBarColor]="primary" [title]="formTitle" (closeClick)="closeDialog()"></app-top-dialog-content>
 
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="loginForm" (ngSubmit)="validateLogin(loginForm)" >
