--- a/farmerapp/src/app/entry-components/sign-up/sign-up.component.html
+++ b/farmerapp/src/app/entry-components/sign-up/sign-up.component.html
@@ -1,3 +1,5 @@
+<app-top-dialog-content [titleBarColor]="primary" [title]="formTitle" (closeClick)="closeDialog()"></app-top-dialog-content>
+
 <mat-toolbar color="primary">
     <h1 mat-dialog-title> {{ formTitle }} </h1>
     <span class="fill-remaining-space"></span>
