--- a/farmerapp/src/app/entry-components/product-bid/product-bid.component.html
+++ b/farmerapp/src/app/entry-components/product-bid/product-bid.component.html
@@ -1,11 +1,5 @@
-<mat-toolbar>
-    <h1 mat-dialog-title>{{formTitle}} : {{selectedProductName}}</h1>
-    <span class="fill-remaining-space"></span>
-    <button class="btn-dialog-close" mat-stroked-button (click)="closeDialog()" tabindex="-1">
-        <mat-icon>clear</mat-icon>
-    </button>
-  </mat-toolbar>
-  
+<app-top-dialog-content [title]="formTitle" (closeClick)="closeDialog()"></app-top-dialog-content>
+
   <mat-dialog-content class="mat-typography">
   
   <div class="mat-elevation-z8">
