--- a/farmerapp/src/app/dashboard/mainpage/mainpage.component.html
+++ b/farmerapp/src/app/dashboard/mainpage/mainpage.component.html
@@ -2,7 +2,7 @@
 
 <mat-drawer-container>
     <mat-drawer mode="side" [opened]="sideBarOpen">
-        <app-sidebar [loggedInUser]="loggedInUser" (switchSideBarForMe)="switchSideBarContent($event)"></app-sidebar>
+        <app-sidebar (switchSideBarForMe)="switchSideBarContent($event)"></app-sidebar>
     </mat-drawer>
     <mat-drawer-content >
         <app-dashboard *ngIf="sideBarIndex == 0"></app-dashboard>
